update the dataset name and terms

--- a/step2-dividing_flat_rugged_terrain/AS_divides_flat&rugged.ipynb
+++ b/step2-dividing_flat_rugged_terrain/AS_divides_flat&rugged.ipynb
@@ -935,39 +935,39 @@
    ],
    "source": [
     "# raster to vector\n",
-    "plain_core_vector = os.path.join(base_path, 'plain_core.shp')\n",
-    "wbt.raster_to_vector_polygons(reclassified_slope_path, plain_core_vector)"
+    "flat_core_vector = os.path.join(base_path, 'flat_core.shp')\n",
+    "wbt.raster_to_vector_polygons(reclassified_slope_path, flat_core_vector)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# delete the polygon which area is less than 0.1\n",
     "\n",
-    "gdf = gpd.read_file(plain_core_vector)\n",
+    "gdf = gpd.read_file(flat_core_vector)\n",
     "gdf['area'] = gdf.area\n",
     "gdf = gdf[gdf['area'] > 100000]\n",
     "# save the gdf to shapefile\n",
-    "gdf.to_file(plain_core_vector, driver='ESRI Shapefile')"
+    "gdf.to_file(flat_core_vector, driver='ESRI Shapefile')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# transform the shapefile to raster\n",
-    "filtered_plain_core_raster = os.path.join(base_path, 'filtered_plain_core.tif')\n",
+    "filtered_flat_core_raster = os.path.join(base_path, 'filtered_flat_core.tif')\n",
     "# get cell size from reprojected_dem_file\n",
     "with rasterio.open(reprojected_dem_file) as src:\n",
     "    cell_size = src.res[0]\n",
     "\n",
     "# read the vector data\n",
-    "vector_data = gpd.read_file(plain_core_vector)\n",
+    "vector_data = gpd.read_file(flat_core_vector)\n",
     "\n",
     "# open the reprojected_dem_file\n",
     "with rasterio.open(reprojected_dem_file) as src:\n",
@@ -991,13 +991,13 @@
     "    meta.update(dtype=rasterio.uint8, count=1, nodata=0)\n",
     "    \n",
     "    # save the raster\n",
-    "    with rasterio.open(filtered_plain_core_raster, 'w', **meta) as dst:\n",
+    "    with rasterio.open(filtered_flat_core_raster, 'w', **meta) as dst:\n",
     "        dst.write(burned, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
     "out_backlink = os.path.join(base_path, 'backlink.tif')\n",
     "\n",
     "wbt.cost_distance(\n",
-    "    source = filtered_plain_core_raster, \n",
+    "    source = filtered_flat_core_raster, \n",
     "    cost = slope_path, \n",
     "    out_accum = accumulated_slope_path, \n",
     "    out_backlink = out_backlink, \n",
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1381,15 +1381,15 @@
    ],
    "source": [
     "# reclassify the accumulated slope\n",
-    "reclassified_accumulated_slope_path = os.path.join(base_path, 'reclassified_plain_mountains.tif')\n",
-    "# accumulated slope reclassification, 0-1500 means 1 - plain, 1500-100000 means 2 - mountain\n",
+    "reclassified_accumulated_slope_path = os.path.join(base_path, 'reclassified_flat_ruggeds.tif')\n",
+    "# accumulated slope reclassification, 0-1500 means 1 - flat, 1500-100000 means 2 - rugged\n",
     "reclass_vals = '1;0;1500;2;1500;100000'\n",
     "wbt.reclass(accumulated_slope_path, reclassified_accumulated_slope_path, reclass_vals)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1409,13 +1409,13 @@
     "# plot the reclassified accumulated slope\n",
     "fig, axs = plt.subplots(1, 3, figsize=(20, 10))\n",
     "with rasterio.open(reclassified_accumulated_slope_path) as src:\n",
-    "    mountain_plain = src.read(1, masked=True)\n",
-    "    axs[0].imshow(mountain_plain)\n",
+    "    rugged_flat = src.read(1, masked=True)\n",
+    "    axs[0].imshow(rugged_flat)\n",
     "    axs[0].set_title('Reclassified Accumulated Slope')\n",
     "    axs[0].axis('off')\n",
     "    # legend\n",
-    "    cbar = plt.colorbar(axs[0].imshow(mountain_plain), ax=axs[0], orientation='horizontal')\n",
-    "    cbar.set_label('Plain(1) - Mountain(2)')\n",
+    "    cbar = plt.colorbar(axs[0].imshow(rugged_flat), ax=axs[0], orientation='horizontal')\n",
+    "    cbar.set_label('flat(1) - rugged(2)')\n",
     "\n",
     "with rasterio.open(slope_path) as src:\n",
     "    slope = src.read(1, masked=True)\n",
